Bug 124597 - Template manager is incorrectly positioned at start
Summary: Template manager is incorrectly positioned at start
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-04-08 01:39 UTC by Aron Budea
Modified: 2019-05-02 11:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-04-08 01:39:15 UTC
Make sure template manager opens when you start impress.

Start LO from console as: ./soffice --impress

=> Template manager opens in top left corner instead of the center.

However, it opens in the center if first the start center is started, and Impress is opened from there.

Observed using LO 6.3.0.0.alpha0+ (c8c0292c2152df8c353aeff32896f0cfa8a53a64) / Ubuntu 18.04.
No issue in LO 6.2.0.3.
=> regression

Bibisected to the following commit using repo bibisect-linux-64-6.3. Adding Cc: to Caolán McNamara, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3e078e17ee2144fb976a7e6b9227152113cea0d4
author		Caolán McNamara <caolanm@redhat.com>	2019-03-26 16:27:17 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-03-28 22:07:06 +0100

weld SfxTemplateManagerDlg
Comment 1 V Stuart Foote 2019-04-09 05:37:33 UTC
Not confirmed on Windows builds, using the simpress.exe launcher the Se;ect a Template dialog opens in the application frame centered.

Version: 6.3.0.0.alpha0+ (x64)
Build ID: f3fc127dc007f32355859ae4fc7d34916c500a18
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-04-08_04:49:13
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 2 Caolán McNamara 2019-04-12 16:26:24 UTC
Which vclplug does this happen in, is it just the gtk (2) one ? Or are you seeing it in another one ?
Comment 3 Aron Budea 2019-04-12 16:42:38 UTC
Actually, it's the gtk3 one (and I checked now, it doesn't occur with gtk backend):

Version: 6.3.0.0.alpha0+
Build ID: a183955acacbc1a3e8579f360f12fd37536120fc
CPU threads: 16; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Caolán McNamara 2019-04-12 19:09:05 UTC
odd, that seems to be fine for me locally. I imagine the problem is it centers itself on the background window before that window takes its final size. Maybe I need to try under X to see if that reproduces it.
Comment 5 raal 2019-04-14 08:30:40 UTC
I can confirm with Version: 6.3.0.0.alpha0+
Build ID: 31ac398cfa30694b18240d31df17a58d699b5bf6
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 6 Caolán McNamara 2019-04-16 10:31:02 UTC
yeah, reproducible under X
Comment 7 Commit Notification 2019-04-17 09:24:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d17d9500a23705a315992ff42cb7c449894fc2ce%5E%21

tdf#124597 template select dialog launched before parent gets final size

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2019-04-23 11:57:13 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: b34786d2774b261be48de92f65a5d0aa3c32b289
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!