tdf#124597 template select dialog launched before parent gets final size

Change-Id: If9f6fa6e072a95381aaf4a539e2081733a0248ec