include/vcl/weld.hxx
@@ -332,6 +332,10 @@ public:
     virtual bool get_resizable() const = 0;
     virtual Size get_size() const = 0;
     virtual Point get_position() const = 0;
+    // ensure window will be centered on its parent, taking into account that
+    // there may currently be pending geometry requests for the parent
+    // not yet processed by the underlying toolkit
+    virtual void set_centered_on_parent_geometry_request() = 0;
     virtual bool has_toplevel_focus() const = 0;
     virtual void present() = 0;
     virtual void set_window_state(const OString& rStr) = 0;
